Initial audio feature

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -85,6 +85,19 @@
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\Scripts\NumberOfMapsData.cs" />
      <Compile Include="Assets\Scripts\BackButtonPress.cs" />
+     <Compile Include="Assets\Scripts\Audio\MusicPlayer.cs" />
+     <Compile Include="Assets\Scripts\Events\Event Types\StringEvent.cs" />
+     <Compile Include="Assets\Scripts\Events\Event Types\GameObjectEvent.cs" />
+     <Compile Include="Assets\Scripts\Events\Event.cs" />
+     <Compile Include="Assets\Scripts\Events\Event Types\TriggerEvent.cs" />
+     <Compile Include="Assets\Scripts\Events\Event Types\IntEvent.cs" />
+     <Compile Include="Assets\Scripts\Events\Event Types\FloatEvent.cs" />
+     <Compile Include="Assets\Scripts\Audio\MusicEvent.cs" />
+     <Compile Include="Assets\Scripts\Audio\MusicData.cs" />
+     <Compile Include="Assets\Scripts\Audio\AudioSettings.cs" />
+     <Compile Include="Assets\Scripts\Audio\SfxPlayer.cs" />
+     <Compile Include="Assets\Scripts\Audio\SfxEvent.cs" />
+     <Compile Include="Assets\Scripts\Audio\SfxData.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
